@@ -9,11 +9,13 @@ Build-Depends: debhelper (>= 9.0.0),
                gnome-pkg-tools (>= 0.10),
                gsettings-desktop-schemas-dev (>= 3.11.5),
                intltool (>= 0.35.0),
-               libappstream-glib-dev (>= 0.3.2),
+               appstream-util,
+               libappstream-glib-dev (>= 0.3.4),
                libglib2.0-dev (>= 2.39.1),
                libgnome-desktop-3-dev,
-               libgtk-3-dev (>= 3.14.1),
+               libgtk-3-dev (>= 3.16),
                libpackagekit-glib2-dev (>= 1.0.0),
+               libpolkit-gobject-1-dev,
                libsoup2.4-dev,
                libsqlite3-dev,
                libxml2-utils,
